--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ step3:
           <input type="text" placeholder="25" id="payee-ammount">
         </td>
         <td>
-          <div class="float-right"><i class="gg-check-r primary"></i><i class="gg-add turn"></i></button></div>
+          <div class="float-right"><i class="gg-check-r primary"></i><i onclick="removePayee(this); return false" class="js-remove gg-add turn"></i></div>
         </td>
       </tr>
     </table>
