using cleaner method than mustache style templating

--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@ step3:
 
     <table id="js-payeerow-fixed-template" style="display:none" >
       <tr>
-        <td><strong>{{payee-name}}</strong></td>
-        <td>{{payee-ac}}</td>
-        <td>{{payee-type}}</td>
-        <td>{{payee-amount}}</td>
+        <td><strong class="js-payee-name"></strong></td>
+        <td class="js-payee-ac"></td>
+        <td class="js-payee-type"></td>
+        <td class="js-payee-amount"></td>
         <td><div class="float-right"><i class="gg-trash"></i><i class="gg-clipboard"></i></div></td>
       </tr>
     </table>
