title the payee table according to step type

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ step3:
             </div>
             <div class="column column-20">
                 <label for="step-type" class="required">Type</label>
-                <select id="step-type">
+                <select class="js-step-type" id="step-type">
                 <option default> -- select -- </option>
                 <option value="fixed">Fixed</option>
                 <option value="percentage">%</option>
@@ -357,7 +357,7 @@ step3:
             <th>Name</th>
             <th>Payment address</th>
             <th>Type</th>
-            <th>%</th>
+            <th class="js-payeetable-type">%</th>
             <th class="col8width"></th>
           </tr>
         </thead>
