refactor, field validation

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ step3:
 
     <div id="js-addstep-fixed-template" style="display:none" >
       <div class="float-right"><i class="gg-arrow-align-v"></i><i class="gg-clipboard"></i></div>
-      <details class="js-step-details">
+      <details class="js-step-details" open>
         <summary class="js-step-summary font2">
           <strong class="js-step-number">Step </strong> – <span class="js-step-description"></span> <em>(Cap:<span class="js-step-cap"></span>)</em>
         </summary>
