Swap cliipboard for edit icons

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ step3:
           </select>
         </td>
         <td>
-          <input type="text" placeholder="25" class="payee-amount">
+          <input type="text" class="payee-amount">
         </td>
         <td>
           <div class="float-right"><i onclick="fixPayee(this); return false" class="js-payee-fix gg-check-r primary"></i><i onclick="removePayee(this); return false" class="js-remove gg-add turn"></i></div>
@@ -402,12 +402,12 @@ step3:
         <td class="js-payee-ac"></td>
         <td class="js-payee-type"></td>
         <td class="js-payee-amount"></td>
-        <td><div class="float-right"><i onclick="removePayee(this); return false" class="js-remove gg-trash"></i><i class="gg-clipboard"></i></div></td>
+        <td><div class="float-right"><i onclick="removePayee(this); return false" class="js-remove gg-trash"></i><i class="icss-edit"></i></div></td>
       </tr>
     </table>
 
     <div id="js-addstep-fixed-template" style="display:none" >
-      <div class="float-right"><i class="gg-arrow-align-v"></i><i class="gg-clipboard"></i></div>
+      <div class="float-right"><i class="gg-arrow-align-v"></i><i class="icss-edit"></i></div>
       <details class="js-step-details" open>
         <summary class="js-step-summary font2">
           <strong class="js-step-number">Step </strong> – <span class="js-step-description"></span> <em>(Cap:<span class="js-step-cap"></span>)</em>
