--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ step3:
             </div>
             <div class="column column-20">
                 <label for="step-type" class="required">Type</label>
-                <select class="js-step-type" class="js-step-type" name="step-type">
+                <select class="js-step-type" name="step-type">
                 <option default> -- select -- </option>
                 <option value="fixed">Fixed</option>
                 <option value="percentage">%</option>
@@ -406,10 +406,10 @@ step3:
     </table>
 
     <div id="js-addstep-fixed-template" style="display:none" >
-      <div class="float-right"><i class="gg-arrow-align-v"></i><i class="icss-edit"></i></div>
+      <div class="float-right"><i class="gg-arrow-align-v"></i><i onclick="editStep(this); return false" class="js-edit icss-edit"></i></div>
       <details class="js-step-details" open>
         <summary class="js-step-summary font2">
-          <strong class="js-step-number">Step </strong> – <span class="js-step-description"></span> <em>(Cap:<span class="js-step-cap"></span>)</em>
+          <strong class="js-step-number">Step </strong> – <span class="js-step-description"></span> <em>(Cap:<span class="js-step-cap"></span>)<span class="js-step-type-index" style="display:none"></span></em>
         </summary>
       </details>
     </div>
