--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ step3:
             </div>
             <div class="column column-20">
                 <label for="step-type" class="required">Type</label>
-                <select class="js-step-type" name="step-type">
+                <select class="js-step-type" class="js-step-type" name="step-type">
                 <option default> -- select -- </option>
                 <option value="fixed">Fixed</option>
                 <option value="percentage">%</option>
