CSS Step counter & Cap: hide
Adds CSS counter to number steps based on visual order, and removes (Cap:) and hyphen when fields are empty.

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ step3:
     <table>
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Payment address</th>
-          <th>Type</th>
-          <th class="js-payeetable-type">%</th>
+          <th><label for="js-payee-name">Name</label></th>
+          <th><label for="js-payee-ac">Payment address</label></th>
+          <th><label for="js-payee-type" class="required">Type</label></th>
+          <th class="js-payeetable-type"><label for="js-payee-amount"></label>%</label></th>
           <th class="col8width"></th>
         </tr>
       </thead>
@@ -225,7 +225,7 @@ step3:
     <div class="float-right"><i class="gg-arrow-align-v"></i><i onclick="editStep(this); return false" class="js-edit icss-edit"></i></div>
     <details class="js-step-details" open>
       <summary class="js-step-summary font2">
-        <strong class="js-step-number">Step </strong> – <span class="js-step-description"></span> <em>(Cap: <span class="js-step-cap"></span>)<span class="js-step-type-index" style="display:none"></span></em>
+        <strong class="js-step-number"></strong><span class="js-step-description"></span> <em><span class="js-step-cap"></span><span class="js-step-type-index" style="display:none"></span></em>
       </summary>
     </details>
   </div>
