check for currency

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <ul id="sortlist">
         </ul>
       
-        <button>Save agreement<i class="gg-check-r"></i></button>&nbsp;<button class="button-secondary" disabled>Generate agreement</button>
+        <button onclick="saveAgreement(); return false">Save agreement<i class="gg-check-r"></i></button>&nbsp;<button class="button-secondary" disabled>Generate agreement</button>
       </fieldset>
     </form>
   </div>
