--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ step3:
           </div>
           <div class="column column-20">
               <label for="step-type" class="required">Type</label>
-              <select class="js-step-type" class="js-step-type" name="step-type">
-              <option default> -- select -- </option>
-              <option value="fixed">Fixed</option>
-              <option value="percentage">%</option>
+              <select onChange="checkCap(this); return false" class="js-step-type" name="step-type">
+                <option default> -- select -- </option>
+                <option value="fixed">Fixed</option>
+                <option value="percentage">%</option>
               </select>
           </div>
           <div class="column column-20">
