Tidying for v 0.1 release
License, copyright notice, minified css, removed some white space, changed waterfall to cascade, readme.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-    <title>Waterfall - MOVA</title>
+    <link rel="stylesheet" href="cascade.css" />
+    <script src="cascade.js" defer></script>
+    <title>Cascade, a revenue-sharing agreement builder</title>
 </head>
 <body>
     
@@ -288,7 +288,8 @@
   </div>
 
   <div id="agreement" class="container margin-top" style="display:none">
-    <h4>RSML Agreement</h4>
+    <h4>RSL Agreement</h4>
+    <p class="small">What is this? <a hrefe="https://github.com/openvideotech/rsl">Read more</a></span></p>
     <pre><code id="js-rsml"></code></pre>
   </div>
 
@@ -387,6 +388,5 @@
     </details>
   </div>
 
-  <!-- --------------------------- -->
 </body>
 </html>
